--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^12.6.8",
+    "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
 }
